Fix SonarQube issues in task suggestion